app/assets/stylesheets/new_styles/02_buttons.scss
// http://www.usabilitypost.com/2012/01/10/pressed-button-state-with-css3/
@mixin button($width: auto) {
  text-decoration: none;
  border: none;
  display: inline-block;
  min-width:$width;
  padding: 10px 15px;
  margin: 5px 10px;
  font-size: 18px;
  cursor: pointer;
  -moz-border_radius: 10px;
  -webkit-border-radius: 10px;
  -khtml-border-radius: 10px; /* for old Konqueror browsers */
  border-radius: 10px; /* future proofing */
  -webkit-box-shadow: 0px 5px 4px rgba(50, 50, 50, 0.75);
  -moz-box-shadow:    0px 5px 4px rgba(50, 50, 50, 0.75);
  box-shadow:         0px 5px 4px rgba(50, 50, 50, 0.75);
  color: white;

  &:hover, &:visited {
    color: white;
  }
  &:active {
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
  }
}


// -----------------------------------------
/* Competitor */
// -----------------------------------------
.competitor {
  background-color: $competitor;
}
.competitor:hover {
  background-color: $competitor_hover;
}
.competitor:active {
  background-color: $competitor_active;
}

// -----------------------------------------
/* Non Competitor */
// -----------------------------------------

.noncompetitor {
  background-color: $noncompetitor;
}
.noncompetitor:hover {
  background-color: $noncompetitor_hover;
}
.noncompetitor:active {
  background-color: $noncompetitor_active;
}

// -----------------------------------------
/* Spectator */
// -----------------------------------------

.spectator {
  background-color: $spectator;
}
.spectator:hover {
  background-color: $spectator_hover;
}
.spectator:active {
  background-color: $spectator_active;
}

// -----------------------------------------
/* Focus Buttons */
// -----------------------------------------
.focus_button:visited, .nonfocus_button:visited {
  background-color: $focus;
  color: white;
}

.focus_button {
  @include button(220px);
  margin: 10px;
  background-color: $focus;
  color: white;
}

.focus_button:hover {
  color: white;
  text-decoration: none;
  background-color: $focus_hover;
}

.focus_button:active {
  background-color: $focus_active;
  border-color: #205f3c;

}

.nonfocus_button {
  @include button(220px);
  color: $nonfocus;
  background-color: white;
  border: 1px solid $nonfocus;
}

.nonfocus_button:hover {
  color: $nonfocus_hover;
  background-color: white;
  border: 1px solid $nonfocus_hover;
}
.nonfocus_button:active {
  color: $nonfocus_active;
  background-color: white;
  border: 1px solid $nonfocus_active;
}

// -----------------------------------------
/* Action Buttons */
// -----------------------------------------
.action_button {
  @include button;
  background-color: #12AC50;
}

.action_button:hover {
  background-color: #4CD673;
}
.action_button:visited {
  color: black;
}

.counter_action_button {
  @include button;
  background-color: #F1D6D6;
}
.counter_action_button:hover {
  background-color: #F16565;
}
.counter_action_button:visited {
  color: black;
}


%reg_link {
  text-decoration: none;
}

.competitor_link {
  @extend %reg_link;
}
.noncompetitor_link {
  @extend %reg_link;
}
.spectator_link {
  @extend %reg_link;
}

.competitor_link {
  color: $competitor;
}
.competitor_link:visited {
  color: $competitor;
}
.competitor_link:hover {
  color: $competitor_hover;
}

.noncompetitor_link {
  color: $noncompetitor;
}
.noncompetitor_link:hover {
  color: $noncompetitor_hover;
}
.noncompetitor_link:visited {
  color: $noncompetitor;
}

.incomplete, .incomplete:hover {
  @include button(auto);
  color: #ccc;
  background-color: #666;
  box-shadow:none !important;
  cursor: default;

}

.back_link {
  @include button;
  background-color: black;
  &:hover {
    background-color: #383838;
  }
  &:active {
    background-color: #282828;
  }
  &:before {
    content: '< '
  }
}

// Small Expense Item Buttons
%small_button {
  @include button(auto);
  padding: 5px;
  font-size: 12px;
}

.free_item {
  @extend %small_button;
  color: white;
  background-color: $free_item;

  &:hover {
    background-color: $free_item_hover;
  }
  &:active {
    background-color: $free_item_active;
  }
}

.delete {
  @extend %small_button;
  color: $delete_item;
  background-color: white;
  border: 1px solid;

  &:hover {
    background-color: $delete_item_hover;
    border-color: $delete_item_hover;
    color: white;
  }
  &:active {
    background-color: $delete_item_active;
    border-color: $delete_item_active;
    color:white;
  }
}

.cost_item {
  @extend %small_button;
  color: white;
  background-color: $cost_item;

  &:hover {
    background-color: $cost_item_hover;
  }
  &:active {
    background-color: $cost_item_active;
  }
}

.sold_out, .sold_out:hover {
  @extend %small_button;
  color: #ccc;
  background-color: #666;
  box-shadow:none;

}


.locked_competition_action {
  @include button;
  background-color: #5B99F5;
}
.locked_cometition_action:hover {
  background-color: #9AC0F8;
}

.registration_button {
  @include button(220px);
  margin-bottom:10px;
  text-align:center;
}

.registration_button:hover, .registration_button:focus {
  text-decoration: none;
}

.registrant {
  border-bottom-left-radius: 11px;
  border-bottom-right-radius: 11px;
  border-top-left-radius: 11px;
  border-top-right-radius: 11px;
  padding: 3px;
}

.registrant_edit_button {
  @include button(auto);
}

.payment_link {
  @include button(150px);
  background-color: $payment;
  color:white;
  &:visited {
    color: white;
  }

  &:hover {
    background-color:$payment_hover;
  }
  &:active {
    background-color: $payment_active;
  }
}

